add editMemo with erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
       <h1>メモアプリ</h1>
     </td>
     <td>
-      <form><input type="submit" value="保存"></form>
+      <form><input type="submit" value="追加"></form>
     </td>
   </tr>
 </table>
