--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,9 @@
       <h1>メモアプリ</h1>
     </td>
     <td>
-      <form><input type="submit" value="追加"></form>
+      <form method="get" action="/newMemo">
+        <input type="submit" value="追加">
+      </form>
     </td>
   </tr>
 </table>
