--- a/views/editMemo.erb
+++ b/views/editMemo.erb
@@ -1,7 +1,9 @@
 <h1>メモアプリ</h1>
-<form method="post" action="/editMemo/<%= @id %>/update">
-  <p><input type="textarea" maxlength='20' name="title" value="<%= @title %>"></p>
-  <p><input type="textarea" maxlength='400' name="body" value="<%= @body %>"></p>
-  <input type="hidden" name="_method" value="patch">
-  <p><input type="submit" value="変更"></p>
-</form>
+<div class="content">
+  <form method="post" action="/editMemo/<%= @id %>/update">
+    <p><input type="text" class="textBoxTitle" required maxlength='20' name="title" value="<%= @title %>"></p>
+    <p><textarea class="textBoxBody" required maxlength='500' name="body"><%= @body %></textarea></p>
+    <input type="hidden" name="_method" value="patch">
+    <p><input type="submit" value="変更"></p>
+  </form>
+</div>
