--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,13 @@
 
 <head>
   <title>メモアプリ</title>
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body>
-  <%= yield%>
+  <div class="container">
+    <%= yield%>
+  </div>
 </body>
 
 </html>
