--- a/views/newMemo.erb
+++ b/views/newMemo.erb
@@ -1,6 +1,10 @@
 <h1>メモアプリ</h1>
-<form method="post" action="/new/create">
-  <p><input required type="textarea" maxlength='20' name="title" value=""></p>
-  <p><input required type="textarea" maxlength='400' name="body" value=""></p>
-  <p><input type="submit" value="保存"></p>
-</form>
+<div class="content">
+  <form method="post" action="/new/create">
+    <p><input type="text" class="textBoxTitle" required maxlength='20' name="title" value=""></p>
+    <p><textarea class="textBoxBody" required maxlength='500' name="body" value=""></textarea></p>
+    <div class="btnArea">
+      <p><input type="submit" value="保存"></p>
+    </div>
+  </form>
+</div>
