change path  to make it according to REST

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
           <h1>メモアプリ</h1>
         </td>
         <td id="addBtn">
-          <form method="get" action="/newMemo">
+          <form method="get" action="/memos/new">
             <input id="newBtn" type="submit" value="追加">
           </form>
         </td>
