メモを作る部分のpathをpostなのでcreateを削除、erbファイルⅡ再就業を追加

--- a/views/newMemo.erb
+++ b/views/newMemo.erb
@@ -1,6 +1,6 @@
 <h1>メモアプリ</h1>
 <div class="content">
-  <form method="post" action="/memos/create">
+  <form method="post" action="/memos">
     <p><input type="text" class="textBoxTitle" required maxlength='20' name="title" value=""></p>
     <p><textarea class="textBoxBody" required maxlength='500' name="body" value=""></textarea></p>
     <div class="btnArea">
