--- a/views/index.erb
+++ b/views/index.erb
@@ -14,7 +14,7 @@
     </table>
   </header>
   <ul>
-    <% @memos['memos'].each do |memo| %>
+    <% @memos.each do |memo| %>
     <li>
       <a href="http://localhost:4567/memos/<%=memo['id']%>"> <%=memo['title']%> </a>
     </li>
