--- a/views/newMemo.erb
+++ b/views/newMemo.erb
@@ -1,4 +1,4 @@
-<h1>メモアプリ</h1>
+<h1><a href="http://localhost:4567/"> メモアプリ</a></h1>
 <div class="content">
   <form method="post" action="/memos">
     <p><input type="text" class="textBoxTitle" required maxlength='20' name="title" value=""></p>
