--- a/views/showMemo.erb
+++ b/views/showMemo.erb
@@ -1,4 +1,4 @@
-<h1>メモアプリ</h1>
+<h1><a href="http://localhost:4567/"> メモアプリ</a></h1>
 <% memo = @memo.slice("id", "title", "body") %>
 <div class="content">
   <h2> <%= memo["title"] %> </h2>
