aタグがリンク表示しなくなるように変更

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@ img {
   max-width: 100%;
   vertical-align: bottom;
 }
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 .container {
   width: 480px;
   margin-left: auto;
