--- a/views/notFound.erb
+++ b/views/notFound.erb
@@ -1,8 +1,5 @@
+<h1><a href="http://localhost:4567/">メモアプリ</a></h1>
 <div class="content">
- <a href="http://localhost:4567/">
-    <image
-      src="https://1.bp.blogspot.com/-d3vDLBoPktU/WvQHWMBRhII/AAAAAAABL6E/Grg-XGzr9jEODAxkRcbqIXu-mFA9gTp3wCLcBGAs/s800/internet_404_page_not_found.png"
-      alt="Not Found" />
-    <p>The requested URL was not found on this server.</p>
- </a>
+  <p>The requested URL was not found on this server.</p>
+  </a>
 </div>
