--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,12 +36,14 @@ a:hover {
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid;
+  margin-bottom: 20px;
 }
 .textBoxBody {
   width: 100%;
   height: 200px;
   font-size: 12px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 h1 {
   color: #3B4675;
