--- a/views/notFound.erb
+++ b/views/notFound.erb
@@ -1,4 +1,4 @@
-<h1><a href="http://localhost:4567/">メモアプリ</a></h1>
+<h1><a href="/">メモアプリ</a></h1>
 <div class="content">
   <p>The requested URL was not found on this server.</p>
   </a>
