--- a/views/showMemo.erb
+++ b/views/showMemo.erb
@@ -1,4 +1,4 @@
-<h1><a href="http://localhost:4567/">メモアプリ</a></h1>
+<h1><a href="/">メモアプリ</a></h1>
 <div class="content">
   <h2> <%= @memo["title"] %> </h2>
   <p><%= @memo["body"] %></p>
